<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/button_width_large"
        android:layout_height="@dimen/button_height_large"
        android:backgroundTint="@color/semi_transparent_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-8dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:shadowDx="6"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="@string/u_plan_title"
        android:textColor="@color/brand_red"
        android:textSize="@dimen/text_size_display"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-8dp" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_graduation_date"
        android:textSize="@dimen/text_size_subhead"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar5"
        android:layout_width="@dimen/bottom_app_bar_width_small"
        android:layout_height="@dimen/bottom_app_bar_height_large"
        android:layout_gravity="bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="292dp" />

    <CalendarView
        android:id="@+id/calendarView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="@dimen/bottom_app_bar_width_large"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_small"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="100dp" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar2"
        android:layout_width="@dimen/bottom_app_bar_width_medium"
        android:layout_height="@dimen/bottom_app_bar_height_small"
        android:layout_gravity="bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="126dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="@dimen/bottom_app_bar_width_large"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_small"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="182dp" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar3"
        android:layout_width="@dimen/bottom_app_bar_width_medium"
        android:layout_height="@dimen/bottom_app_bar_height_small"
        android:layout_gravity="bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="206dp" />


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar4"
        android:layout_width="@dimen/bottom_app_bar_width_large"
        android:layout_height="@dimen/bottom_app_bar_height_medium"
        android:layout_gravity="bottom"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_horizontal_margin"
        android:text="@string/graduate_student_prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_horizontal_margin"
        android:text="@string/transfer_student_prompt"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="638dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/image_view_icon_width"
        android:layout_height="@dimen/image_view_icon_height"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_small"
        android:contentDescription="@string/university_logo_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/UT_Spartans_wordmark" />

    <WebView
        android:layout_width="@dimen/webview_width"
        android:layout_height="@dimen/webview_height"
        android:layout_marginEnd="@dimen/fragment_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="8dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="@dimen/button_width_small"
        android:layout_height="@dimen/button_height_small"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:backgroundTint="@color/brand_red"
        android:enabled="false"
        android:text="@string/see_graduation_plan"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login3"
        android:layout_width="@dimen/button_width_small"
        android:layout_height="@dimen/button_height_small"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:backgroundTint="@color/brand_red"
        android:enabled="false"
        android:text="@string/find_your_advisor"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>